fix: finalize first version of workshop

--- a/http_request_workshop.ipynb
+++ b/http_request_workshop.ipynb
@@ -20,12 +20,23 @@
         "\n",
         "The [http-request-workshop](https://github.com/p3kk4/http-request-workshop) repository is available on GitHub and serves as a material package that includes all the necessary resources required to learn about HTTP Requests via practical examples.\n",
         "\n",
-        "The Python Notebook (.ipynb) file can be opened in [Google Colab](https://colab.research.google.com) can be used for self-paced learning, although it is primarily meant to be complemented by instructor-led workshops. During the workshops learners can engage in hands-on learning activities and building their own documentation while exploring HTTP Requests.\n",
+        "The Jupyter Notebook (.ipynb) file can be opened in [Google Colab](https://colab.research.google.com) or [Binder](https://mybinder.org/) can be used for self-paced learning, although it is primarily meant to be complemented by instructor-led workshops. During the workshops learners can engage in hands-on learning activities and building their own documentation while exploring HTTP Requests.\n",
         "\n",
         "## Structure of the Internet\n",
         "\n",
-        "https://global-internet-map-2021.telegeography.com/  \n",
-        "https://global-internet-map-2022.telegeography.com/\n",
+        "It is important to have a firm grasp on the structure of the Internet if you want to understand how Public IP addresses are related to data transfer over public networks. HTTP Requests transfer data by relying on TCP/IP protocol stack after all. Here we will seek to elaborate on the major components of the Internet so that learners can better understand Public IP addresses, ping, traceroute and HTTP protocol.\n",
+        "\n",
+        "Interent is actually a large gathering of interconnected networks called Autonomous Systems (AS). These Autonomous Systems are basically Internet Service Providers(ISP) networks, although the whole truth is more nyanced. ISPs maintain and operate their own networks that they connect to the Backbone Network of the country they operate in. ISPs have been allocated Public IP Addresses by ICANN organization that they are able to assign to their Customers (organizations and individuals) when customers connect their networks or devices to ISPs' networks. Backbone Networks are connected to other networks big and small in other geographical areas by Undersea Cables. This setup is called the Internet, and that is where the network traffic must flow.\n",
+        "\n",
+        "These are excellent resources for the learners to observe how the Interent is structured globally:\n",
+        "\n",
+        "- [Global Internet Map 2021](https://global-internet-map-2021.telegeography.com/)\n",
+        "- [Global Internet Map 2022](https://global-internet-map-2022.telegeography.com/)\n",
+        "- [Submarine Cable Map](https://www.submarinecablemap.com/)\n",
+        "\n",
+        "You can check how Public IPv4 Addresses are distributed in Finland to Autonomous Systems (ISPs and other organizations) from this resource:\n",
+        "\n",
+        "- [Finland (FI) - IPv4 Address Statistics](https://www-public.imtbs-tsp.eu/~maigron/rir-stats/ripe-allocations/ipv4/by-number/fi-ipv4-by-number.html)\n",
         "\n",
         "## HTTP Protocol\n",
         "\n",
@@ -57,7 +68,7 @@
         "- CONNECT\n",
         "- TRACE\n",
         "\n",
-        "Learning objective of this workshop is to make learners more aware about the HTTP protocol and how it works. This is an important ICT skill that helps people to understand the Internet and web services. Understanding many Pubic Cloud topics is superficial if lerner has inadequate grasp on the OSI reference model and role of HTTP Protocol in it and relevance of HTTP Protocol to their lives.\n",
+        "Learning objective of this workshop is to make learners more aware about the HTTP protocol and how it works. This is an important ICT skill that helps people to understand the Internet and web services. Understanding many Pubic Cloud topics is superficial if learner has inadequate grasp on the OSI reference model and role of HTTP Protocol in it and relevance of HTTP Protocol to their lives.\n",
         "\n",
         "## Understanding URL\n",
         "\n",
@@ -73,7 +84,7 @@
       "source": [
         "## Prepare Notebook for Workshop\n",
         "\n",
-        "Python Notebook technology is really interesting. You can include Text Cells and Code Cells within the Python Notebook in an interesting way that allows for building interatice notebooks that contain and allow execution of Python code mixed in with text blocks. Python Notebook is a notebook and code runtime at the same time!\n",
+        "Jupyter Notebook technology is really interesting. You can include Text Cells and Code Cells within the Jupyter Notebook in an interesting way that allows for building interatice notebooks that contain and allow execution of Python code mixed in with text blocks. Python Notebook is a notebook and code runtime at the same time!\n",
         "\n",
         "You can execute Python code within Code Cells by executing code from **Play** type button on top left corner of each Code Cell. Code is executed and results are displayed in an Output Cell below the Code Cell. All outcomes from executing Code Cells on previous Code Cells affect the context of following Code Cells. This means, that if you do execute code and store results in variables in one Code Cell, you can use these results in following Code Cells. This makes for an interesting and interactive learning environment!\n",
         "\n",
@@ -96,8 +107,6 @@
         "\n",
         "!pip install icmplib\n",
         "from icmplib import ping, traceroute\n",
-        "\n",
-        "!sudo setcap cap_net_raw+ep $(realpath $(which python3))\n",
         "\n",
         "# Setup Common Variables\n",
         "default_headers = {\n",
@@ -127,10 +136,7 @@
       "source": [
         "# Ping\n",
         "  \n",
-        "Latency  \n",
-        "Package Loss  \n",
-        "\n",
-        "https://pypi.org/project/icmplib/"
+        "ping command is used to measure round-trip latency (that is delay associated to transfer of the data package from source to destination server and receiving reply about the receival of the data package) between source and destination devices. Latency is often declared in milliseconds."
       ]
     },
     {
@@ -210,15 +216,9 @@
       "source": [
         "# Traceroute\n",
         "\n",
-        "Text\n",
+        "Routing over the Internet refers to the process of finding a path for network traffic to travel from the source (network and device) to the destination (network and device). Routing happens through Borger Gateway Protocol (BGP) that has the ability to find the route to destination through Autonomous System networks. Routing uses Public IP Address to determine the destination network, which is responsible for redirecting network traffic to the device that Public IP Address is associated to. Data transfer within local network happens by using MAC Address of the target device.\n",
         "\n",
-        "Routing\n",
-        "\n",
-        "This function uses the IP protocol time to live field and attempts to elicit an ICMP Time Exceeded response from each gateway along the path to some host.\n",
-        "\n",
-        "traceroute command is used to display the path that a packet takes to reach a destination. It lists all the routers it passes through until it reaches its destination, or fails to and is discarded. Each router represents a hop in the path.\n",
-        "\n",
-        "In the traceroute output, the term \"gateway\" is used to denote the device that is routing the traffic. This could be a router, a modem, or any other device that performs this function."
+        "traceroute command can be used to display the path that a packet takes to reach a destination. It lists all the routers it passes through until it reaches its destination, or fails to and is discarded. Each router represents a hop in the path. In the traceroute output, the term \"gateway\" is used to denote the device that is routing the traffic. This could be a router, a modem, or any other device that performs this function."
       ]
     },
     {
@@ -233,7 +233,7 @@
       },
       "outputs": [],
       "source": [
-        "# Let's check what is IP address where requests are originating from (Google Colab Service)...\n",
+        "# Let's check what is IP address where requests are originating from (service executing Python code in Jupyter Notebook)...\n",
         "colab_ip = get_my_ip()\n",
         "colab_ipinfo = requests.get(f'https://ipinfo.io/{colab_ip}').json()\n",
         "pretty_json_print(colab_ipinfo)"
@@ -299,13 +299,26 @@
     },
     {
       "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "# Online Shop Scenario\n",
+        "\n",
+        "In this workshop as learners are exploring different HTTP Requests we can imagine HTTP Requests are being sent by web browser of a person who is in middle of the process of browsing and buying cat plushies (soft animal toys) from Online Shop. For each HTTP Request type we will try to give an example in what context each request might be used. API that will be used during this workshop is not built to work like online shop, but it works as a system that analyzes received HTTP Request and tells information about each processed HTTP request."
+      ]
+    },
+    {
+      "cell_type": "markdown",
       "metadata": {
         "id": "cw1gJIm7ttap"
       },
       "source": [
         "## HTTP Request OPTIONS\n",
         "\n",
-        "Text"
+        "**HTTP Request OPTIONS** is used to get communication options (the supported methods, headers, or other capabilities) of the API for the specified resource.\n",
+        "\n",
+        "[Detailed Information](https://developer.mozilla.org/en-US/docs/Web/HTTP/Methods/OPTIONS)\n",
+        "\n",
+        "**Online Shop Scenario:** Retrieving information about supported methods for a resource. Request OPTIONS to /plushies. Purpose is to retrieve information about the supported HTTP methods for interacting with the plushies resource."
       ]
     },
     {
@@ -353,7 +366,11 @@
       "source": [
         "## HTTP Request HEAD\n",
         "\n",
-        "Text"
+        "**HTTP Request HEAD** is used to retrieve response headers (metadata, status codes, or other header information without needing to download the full content of the resource) identical to those of a GET request, but without the response body.\n",
+        "\n",
+        "[Detailed Information](https://developer.mozilla.org/en-US/docs/Web/HTTP/Methods/HEAD)\n",
+        "\n",
+        "**Online Shop Scenario:** Checking if a plushie is in stock. Request HEAD to /plushies/789. Purpose is to retrieve only the headers of the response to check if the plushie with ID 789 is in stock without downloading the full content."
       ]
     },
     {
@@ -417,7 +434,11 @@
       "source": [
         "## HTTP Request GET\n",
         "\n",
-        "Text"
+        "**HTTP GET Request** retrieves information about specified resource from server by contacting API.\n",
+        "\n",
+        "[Detailed Information](https://developer.mozilla.org/en-US/docs/Web/HTTP/Methods/GET)\n",
+        "\n",
+        "**Online Shop Scenario:** When a customer is browsing the plushies on the online shop. Request GET to path /plushies. Purpose is to retrieve a list of available plushies. This request is used when the customer is viewing the main page or a specific category of plushies."
       ]
     },
     {
@@ -537,7 +558,11 @@
       "source": [
         "## HTTP Request PUT\n",
         "\n",
-        "Text"
+        "**HTTP Request PUT** updates ( server then processes the request and replaces the existing resource) an existing resource.\n",
+        "\n",
+        "[Detailed Information](https://developer.mozilla.org/en-US/docs/Web/HTTP/Methods/PUT)\n",
+        "\n",
+        "**Online Shop Scenario:** When a customer updates the quantity of a plushie in their shopping cart. Request PUT to path /cart/update. Purpose is to update the quantity of a plushie in the customer's shopping cart. This request is sent when the customer changes the quantity of a plushie in their cart, and the new quantity is included in the request body."
       ]
     },
     {
@@ -570,7 +595,11 @@
       "source": [
         "## HTTP Request POST\n",
         "\n",
-        "Text"
+        "**HTTP Request POST** instructs the server to create a new entry in a database or is used to submit data to be processed to a specified resource.\n",
+        "\n",
+        "[Detailed Information](https://developer.mozilla.org/en-US/docs/Web/HTTP/Methods/POST)\n",
+        "\n",
+        "**Online Shop Scenario:** When a customer adds a plushie to their shopping cart. Request POST to path /cart/add. Purpose is to add a plushie to the customer's shopping cart. This request is sent when the customer clicks the \"Add to Cart\" button. The plushie details are typically included in the request body."
       ]
     },
     {
@@ -599,7 +628,11 @@
       "source": [
         "## HTTP Request DELETE\n",
         "\n",
-        "Text"
+        "**HTTP Request DELETE** is used to delete a resource or related component (indicates the desire to delete the specified resource).\n",
+        "\n",
+        "[Detailed Information](https://developer.mozilla.org/en-US/docs/Web/HTTP/Methods/DELETE)\n",
+        "\n",
+        "**Online Shop Scenario:** When a customer removes a plushie from their shopping cart. Request DELETE to /cart/remove. Purpose is to remove a plushie from the customer's shopping cart. This request is sent when the customer decides to remove a plushie from their cart. The plushie ID or other relevant details are typically included in the request body."
       ]
     },
     {
@@ -629,10 +662,6 @@
         "id": "4v2TbvnN3ftC"
       },
       "source": [
-        "## Links\n",
-        "\n",
-        "- ASDBLAA...\n",
-        "\n",
         "## Disclaimer\n",
         "\n",
         "All the information in this notebook is published in good faith and for general information purpose only. I do not make any warranties about the completeness, reliability and accuracy of this information. Any action you take upon the information you find in this notebook, is strictly at your own risk. I will not be liable for any losses and/or damages in connection with the use of materials in this notebook.\n",
