fix: move background info to main website

--- a/http_request_workshop.ipynb
+++ b/http_request_workshop.ipynb
@@ -18,25 +18,14 @@
         "\n",
         "## Overview\n",
         "\n",
-        "The [http-request-workshop](https://github.com/p3kk4/http-request-workshop) repository is available on GitHub and serves as a material package that includes all the necessary resources required to learn about HTTP Requests via practical examples.\n",
+        "HTTP Request Workshop is available through pekkakorpi-tassi.fi website. The workshop consists of following key resources:\n",
         "\n",
-        "The Jupyter Notebook (.ipynb) file can be opened in [Google Colab](https://colab.research.google.com) or [Binder](https://mybinder.org/) can be used for self-paced learning, although it is primarily meant to be complemented by instructor-led workshops. During the workshops learners can engage in hands-on learning activities and building their own documentation while exploring HTTP Requests.\n",
+        "- Main page of the workshop published on [pekkakorpi-tassi.fi](https://pekkakorpi-tassi.fi/materials/http_request_workshop.html) website.\n",
+        "- REST API that allow learners to explore and learn about HTTP Requests.\n",
+        "- Interactive Jupyter Notebook on [GitHub](https://github.com/p3kk4/http_request_workshop) helps learners to explore HTTP Requests and associated technologies by running Python code that contains technical arrangements to test the REST API.\n",
+        "- ***API documentation for the REST API that acts as a technology demonstrator and as a general example about API documentation.***\n",
         "\n",
-        "## Structure of the Internet\n",
-        "\n",
-        "It is important to have a firm grasp on the structure of the Internet if you want to understand how Public IP addresses are related to data transfer over public networks. HTTP Requests transfer data by relying on TCP/IP protocol stack after all. Here we will seek to elaborate on the major components of the Internet so that learners can better understand Public IP addresses, ping, traceroute and HTTP protocol.\n",
-        "\n",
-        "Interent is actually a large gathering of interconnected networks called Autonomous Systems (AS). These Autonomous Systems are basically Internet Service Providers(ISP) networks, although the whole truth is more nyanced. ISPs maintain and operate their own networks that they connect to the Backbone Network of the country they operate in. ISPs have been allocated Public IP Addresses by ICANN organization that they are able to assign to their Customers (organizations and individuals) when customers connect their networks or devices to ISPs' networks. Backbone Networks are connected to other networks big and small in other geographical areas by Undersea Cables. This setup is called the Internet, and that is where the network traffic must flow.\n",
-        "\n",
-        "These are excellent resources for the learners to observe how the Interent is structured globally:\n",
-        "\n",
-        "- [Global Internet Map 2021](https://global-internet-map-2021.telegeography.com/)\n",
-        "- [Global Internet Map 2022](https://global-internet-map-2022.telegeography.com/)\n",
-        "- [Submarine Cable Map](https://www.submarinecablemap.com/)\n",
-        "\n",
-        "You can check how Public IPv4 Addresses are distributed in Finland to Autonomous Systems (ISPs and other organizations) from this resource:\n",
-        "\n",
-        "- [Finland (FI) - IPv4 Address Statistics](https://www-public.imtbs-tsp.eu/~maigron/rir-stats/ripe-allocations/ipv4/by-number/fi-ipv4-by-number.html)\n",
+        "This Jupyter Notebook (.ipynb) file can be opened in [Google Colab](https://colab.research.google.com) or [Binder](https://mybinder.org/) can be used for self-paced learning, although it is primarily meant to be complemented by instructor-led workshops. During the workshops learners can engage in hands-on learning activities and building their own documentation while exploring HTTP Requests.\n",
         "\n",
         "## HTTP Protocol\n",
         "\n",
@@ -44,14 +33,15 @@
         "\n",
         "Here is a collection of some relevant terms that you should be aware about related to the HTTP Protocol:\n",
         "\n",
-        "- Scheme (http:// or https://) indicates if connection is to be encrypted.\n",
         "- URL indicates human friendly name for a server application to be contacted.\n",
+        "- Scheme (http:// or https://) indicates if connection is to be encrypted.\n",
         "- DNS name resolution is used to discover Public IP Address of the server.\n",
         "- HTTP Protocol is the message system client uses to exchange data with the server.\n",
+        "- TCP Protocol + IP Address is what exchanges data between different networks.\n",
         "- Public IP Address indicates the network that the server is part of.\n",
         "- TCP Port (default 80 for http and default 443 for https) indicates application on the server.\n",
-        "- TCP/IP Protocol is what exchanges data between different networks.\n",
-        "- MAC/Ethernet Protocol is what exchanges data within the same network.\n",
+        "- Ethernet Protocol + MAC Address is what exchanges data within the same network.\n",
+        "- MAC Address indicates unique network interface card.\n",
         "\n",
         "In this workshop we want to explore HTTP Protocol specifically. Most people are actively (sometimes unknowingly) using a single HTTP method...:\n",
         "\n",
@@ -72,10 +62,7 @@
         "\n",
         "## Understanding URL\n",
         "\n",
-        "A good starting point to understand HTTP Protocol is to understand URL. It is URL that people and systems frequently use as they communicate between other systems over the Internet. There is supportive diagram made available through [pekkakorpi-tassi.fi](https://pekkakorpi-tassi.fi/materials/understanding_url.html) website, but there is a wealth of material available on the Internet or through generative AIs to learn specifics about URL. Understanding how URL is structured helps you to associate each structural part to OSI Reference Model and how data transfer over the Internet happens.\n",
-        "\n",
-        "\n",
-        "\n"
+        "A good starting point to understand HTTP Protocol is to understand URL. It is URL that people and systems frequently use as they communicate between other systems over the Internet. You can check supportive diagram made available through [pekkakorpi-tassi.fi](https://pekkakorpi-tassi.fi/materials/understanding_url.html) website, but there is a wealth of material available on the Internet or through generative AIs to learn specifics about URL. Understanding how URL is structured helps you to associate each structural part to OSI Reference Model and how data transfer over the Internet happens."
       ]
     },
     {
@@ -125,7 +112,26 @@
         "def get_my_ip():\n",
         "  hostname=socket.gethostname()\n",
         "  ipaddress=socket.gethostbyname(hostname)\n",
+        "  return ipaddress\n",
+        "\n",
+        "# Get IP Address of specified hostname\n",
+        "def get_ip_from_hostname(hostname):\n",
+        "  ipaddress=socket.gethostbyname(hostname)\n",
         "  return ipaddress"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# Investigate Public IPv4 Address behind specified hostname by resolving URL by using Domain Name System to Public IPv4 Address\n",
+        "\n",
+        "example_hostname = 'www.haaga-helia.fi'\n",
+        "example_ip = get_ip_from_hostname(example_hostname)\n",
+        "\n",
+        "print(dns_example_hostname + ' resolved as Public IPv4 Address: ' + example_ip)"
       ]
     },
     {
