chore: clarify wording

--- a/http_request_workshop.ipynb
+++ b/http_request_workshop.ipynb
@@ -674,7 +674,7 @@
         "\n",
         "## License\n",
         "\n",
-        "Materials distributed here are made available under the terms of the Creative Commons Attribution Non Commercial No Derivatives 4.0 International License.\n",
+        "The materials of this workshop - specifically the associated entry on pekkakorpi-tassi.fi website and materials made available through GitHub repository github.com/p3kk4/http_request_workshop (excluding the source code of associated API and API documentation) - are made available under the terms of the Creative Commons Attribution Non Commercial No Derivatives 4.0 International License.\n",
         "\n",
         "- [https://creativecommons.org/licenses/by-nc-nd/4.0/deed.en](https://creativecommons.org/licenses/by-nc-nd/4.0/deed.en)"
       ]
